--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,15 @@ p{
   color: #FEF2BF;
 }
 
+
+footer
+
+{
+  margin-top: 45px;
+  color: #FEF2BF;
+  font-family: cursive;
+}
+
 #level-title {
   font-family: 'Press Start 2P', cursive;
   font-size: 3rem;
