--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,12 @@ p{
   color: #FEF2BF;
 }
 
+.foot
+{
+  margin-top: 45px;
+  color: #FEF2BF;
+  font-family: cursive;
+}
 
 footer{
   margin-top: 45px;
